js code to have array with object and on page load images etc

--- a/checkout.html
+++ b/checkout.html
@@ -59,39 +59,9 @@
             <li><a href="contact.html">KONTAKTA OSS</a></li>
         </ul>
     </div>
-    <!-- <ul>
-         <li class="home"><a href="index.html"><img src="images/icons/home-black.png"></a></li>
-         <li class="dam"><a href="dam_products.html">Dam</a>
-             <ul>
-                 <li><a href="products.html">Toppar</a></li>
-                 <li><a href="products.html">Klänningar</a></li>
-                 <li><a href="products.html">Skor</a></li>
-             </ul>
-         </li>
-         <li class="herr"><a href="herr_products.html">Herr</a>
-             <ul>
-                 <li><a href="products.html">Tröjor</a></li>
-                 <li><a href="products.html">Byxor</a></li>
-                 <li><a href="products.html">Skor</a></li>
-             </ul>
-         </li>
-         <li class="barn"><a href="#">Barn</a>
-             <ul>
-                 <li><a href="products.html">Tröjor</a></li>
-                 <li><a href="products.html">Byxor</a></li>
-                 <li><a href="products.html">Skor</a></li>
-             </ul>
-         </li>
-         <li class="contact"><a href="contact.html">Kontakta oss</a></li>
-     </ul>
- </div>  -->
 </header>
-
-
-
 <main>
-
-<section class="container">
+    <section class="container">
         <h1>Checkout</h1>
         <section class="nestledContainer">
         <img src="images/products/BARN/dresses/ch-d%20(1).jpg" alt="Bild på min produkt i kassa.">
@@ -106,14 +76,13 @@
                     <option value="röd">Röd</option>
                 </select>
             </form>
-
         </section>
 
-    <section class="totalPay">
-        <p>Totalt:</p>
-        <p>500kr</p>
+        <section class="totalPay">
+            <p>Totalt:</p>
+             <p>500kr</p>
+        </section>
     </section>
-</section>
 
 
     <section>
@@ -154,10 +123,8 @@
             </fieldset>
             </div>
         </form>
-
     </section>
 </main>
-
 
 <footer>
     <p>Follow us:</p>
@@ -167,5 +134,7 @@
         <li><a href="http://www.youtube.com"><img src='images/icons/icone_youtube.png' alt="Youtube"></a></li>
     </ul>
 </footer>
+
+<script type="text/javascript" src="scripts/checkout.js"></script>
 </body>
 </html>
