--- a/products.html
+++ b/products.html
@@ -58,44 +58,16 @@
             <li><a href="contact.html">KONTAKTA OSS</a></li>
         </ul>
     </div>
-    <!-- <ul>
-         <li class="home"><a href="index.html"><img src="images/icons/home-black.png"></a></li>
-         <li class="dam"><a href="dam_products.html">Dam</a>
-             <ul>
-                 <li><a href="products.html">Toppar</a></li>
-                 <li><a href="products.html">Klänningar</a></li>
-                 <li><a href="products.html">Skor</a></li>
-             </ul>
-         </li>
-         <li class="herr"><a href="herr_products.html">Herr</a>
-             <ul>
-                 <li><a href="products.html">Tröjor</a></li>
-                 <li><a href="products.html">Byxor</a></li>
-                 <li><a href="products.html">Skor</a></li>
-             </ul>
-         </li>
-         <li class="barn"><a href="#">Barn</a>
-             <ul>
-                 <li><a href="products.html">Tröjor</a></li>
-                 <li><a href="products.html">Byxor</a></li>
-                 <li><a href="products.html">Skor</a></li>
-             </ul>
-         </li>
-         <li class="contact"><a href="contact.html">Kontakta oss</a></li>
-     </ul>
- </div>  -->
 </header>
 
 <main>
-
     <section id="topSeller">
         <header>
             <h2>Produkter</h2>
         </header>
-
-        <figure class="firstProduct">
+       <!-- <figure class="firstProduct">
             <div id="product1">
-                <img src="images/products/DAM/dresses/d%20(1).jpg" alt="Bild på produkt dam">
+                <img src="images/products/DAM/dresses/d%20(3).jpg" alt="Bild på produkt dam">
                 <p>Namn på produkten</p>
                 <p>Märke på produkten</p>
                 <p>Pris SEK</p>
@@ -103,7 +75,6 @@
                 <button class="heart-It"></button>
             </div>
         </figure>
-
         <figure class="firstProduct">
             <div id="product2">
                 <img src="images/products/HERR/jackets_men/m-j%20(1).jpg" alt="Bild på produkt herr">
@@ -114,7 +85,6 @@
                 <button class="heart-It"></button>
             </div>
         </figure>
-
         <figure class="firstProduct">
             <div id="product3">
                 <img src="images/products/BARN/shirts/ch-sh%20(3).jpg" alt="Bild på produkt barn">
@@ -125,7 +95,6 @@
                 <button class="heart-It"></button>
             </div>
         </figure>
-
         <figure class="firstProduct">
             <div id="product4">
                 <img src="images/products/BARN/shirts/ch-sh%20(3).jpg" alt="Bild på produkt barn">
@@ -136,7 +105,6 @@
                 <button class="heart-It"></button>
             </div>
         </figure>
-
         <figure class="firstProduct">
             <div id="product5">
                 <img src="images/products/BARN/shirts/ch-sh%20(3).jpg" alt="Bild på produkt barn">
@@ -147,7 +115,6 @@
                 <button class="heart-It"></button>
             </div>
         </figure>
-
         <figure class="firstProduct">
             <div id="product6">
                 <img src="images/products/BARN/shirts/ch-sh%20(3).jpg" alt="Bild på produkt barn">
@@ -157,21 +124,19 @@
                 <button class="shoppingBag"></button>
                 <button class="heart-It"></button>
             </div>
-        </figure>
+        </figure> -->
     </section>
 </main>
 
-
 <footer>
-    <!-- <div class="footerNav"> -->
+
     <p>Follow us:</p>
     <ul>
         <li><a href="http://www.facebook.com"><img src='images/icons/facebook.png' alt="Facebook"></a></li>
         <li><a href="http://www.instagram.com"><img src='images/icons/icon_instagram.png' alt="Instagram"></a></li>
         <li><a href="http://www.youtube.com"><img src='images/icons/icone_youtube.png' alt="Youtube"></a></li>
     </ul>
-    <!-- </div> -->
 </footer>
-
+<script type="text/javascript" src="scripts/products.js"></script>
 </body>
 </html>
