--- a/checkout.html
+++ b/checkout.html
@@ -62,11 +62,11 @@
 </header>
 <main>
     <section class="container">
-        <h1>Checkout</h1>
+        <h1>Din Varukorg</h1>
         <section class="nestledContainer">
-        <img src="images/products/BARN/dresses/ch-d%20(1).jpg" alt="Bild på min produkt i kassa.">
+        <img src="images/products/DAM/dresses/d%20(3).jpg" alt="Bild på min produkt i kassa.">
         <p>Produkt namn: Dress Svart</p>
-        <p>Pris: 500kr</p>
+        <p>Pris: 299 SEK</p>
 
             <form action="http://www.example.com/profile.php">
                 <p>Färg</p>
@@ -83,8 +83,6 @@
              <p>500kr</p>
         </section>
     </section>
-
-
     <section>
         <form action="mailto:aboutalebabbe@gmail.com" enctype="text/plain" method="post">
             <div class="fraktInfo">
@@ -95,6 +93,12 @@
 
             <label for="lname">Efternamn: </label>
             <input id="lname" minlength="3" type="text" placeholder="Efternamn" name="lname" pattern="[a-zA-Z ]+" required>
+
+            <label for="email">Email: </label>
+            <input id="email" type="email" placeholder="Email"  name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+
+            <label for="PhoneNumber">Telefonnummer: </label>
+            <input id="PhoneNumber" type="Number" placeholder="Telefonnummer"  name="phoneNumber" pattern="[0-9]" required>
 
             <label for="address">Address: </label>
             <input id="address" minlength="3" type="text" placeholder="Address" name="address" pattern="[a-zA-Z ]+[0-9]" required>
@@ -108,18 +112,18 @@
             <label for="land">Land: </label>
             <input id="land" minlength="3" type="text" placeholder="Land" name="land" pattern="[a-zA-Z ]+" required>
 
-            <label for="email">Email: </label>
-            <input id="email" type="email" placeholder="Email"  name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
-            <fieldset class="fraktType">
-                <legend>Välj frakt</legend>
+            <label for="comments">Meddelande: </label>
+            <textarea name="comments" id="comments" rows="7" cols="40" minlength="10" maxlength="255"></textarea>
 
+            <fieldset class="fraktType">
+            <legend>Välj frakt</legend>
 
             <input value="Shipping" type="radio" name="Shipping" required> <img src="images/icons/icon_free_shipping.png" alt="Bild på posttyp."> Standard
             <input value="Shipping" type="radio" name="Shipping" required> <img src="images/icons/icon_express_shipping.png" alt="Bild på posttyp."> Express
             <input value="Shipping" type="radio" name="Shipping" required> <img src="images/icons/icon_home_shipping.png" alt="Bild på posttyp."> Leverans Hem
             </fieldset>
 
-            <input class="skickaKnapp" type="submit" value="Skicka">
+                <button class="skickaKnapp" type="submit" value="Fortsätt till betalning">Fortsätt till betalning</button>
             </fieldset>
             </div>
         </form>
