change class to id on span element

--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
         <!-- <div id="rightTop"> -->
         <li id="login"> <a href="#"> <img src="images/icons/icon_profile.png" alt="Profil"> </a> </li>
         <li id="onskelista"> <a href="#"> <img src="images/icons/icone_heart.png" alt="Önskelista"> </a> </li>
-        <li id="kassa"> <a href="checkout.html"> <img src="images/icons/icon_shopping_bag.png" alt="Kassa"></a><span class="totalItemsInShoppingbag"></span> </li>
+        <li id="kassa"> <a href="checkout.html"> <img src="images/icons/icon_shopping_bag.png" alt="Kassa"></a><span id="totalItemsInShoppingbag"></span> </li>
         <!-- </div> -->
     </ul>
 </header>
